// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader fetches new data on a timer 1`] = `
<Loader>
  <div
    className="full-height"
  >
    <div
      className="loading-spinner"
    />
    <WrappedComponent
      some="data"
    >
      <div
        className="wrapped-component"
      />
    </WrappedComponent>
  </div>
</Loader>
`;

exports[`Loader renders the component after receiving data 1`] = `
<Loader>
  <div
    className="full-height"
  >
    <WrappedComponent
      some="data"
    >
      <div
        className="wrapped-component"
      />
    </WrappedComponent>
  </div>
</Loader>
`;

exports[`Loader renders the spinner initially 1`] = `
<Loader>
  <div
    className="full-height"
  >
    <div
      className="loading-spinner"
    />
  </div>
</Loader>
`;
